--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
         <div class="message">
             <a class="twitter-link" href="https://twitter.com/home/?status=I%20created%20a%20project%20with%20AWS%20CodeStar!%20%23AWS%20%23AWSCodeStar%20https%3A%2F%2Faws.amazon.com%2Fcodestar"><img src="assets/img/tweet.svg" /></a>
             <div class="text">
-                <h1>Congratulations Uday!</h1>
-                <h2>You are good to Go!</h2>
+                <h1>Congratulations <i>Uday !</i></h1>
+                <h2>You are good to Go !</h2>
             </div>
         </div>
     </div>
